[package]
name = "sanity-rs"
version = "0.1.0"
edition = "2021"
authors = ["Umar Gora <umar.gora@formidable.com>"]
description = "The open source client for consuming Sanity with Rust."
license = "MIT"
repository = "https://github.com/umxr/sanity-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
